# ChangeLog for dev-python/beautifulsoup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.26 2009/12/21 00:13:11 arfrever Exp $

*beautifulsoup-3.1.0.1-r1 (21 Dec 2009)
*beautifulsoup-3.0.8 (21 Dec 2009)

  21 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +beautifulsoup-3.0.8.ebuild, -beautifulsoup-3.1.0.1.ebuild,
  +beautifulsoup-3.1.0.1-r1.ebuild:
  Version bump (3.0.8). Move 3.0 and 3.1 series to separate slots.
  Rationale: http://www.crummy.com/software/BeautifulSoup/3.1-problems.html

  22 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  beautifulsoup-3.1.0.1.ebuild:
  Marked ~x86-solaris

  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.0.7.ebuild,
  beautifulsoup-3.1.0.1.ebuild:
  Add ~ia64/~sparc wrt #291232

  03 Nov 2009; Jeroen Roovers <jer@gentoo.org> beautifulsoup-3.1.0.1.ebuild:
  Marked ~HPPA (bug #291232).

  10 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  beautifulsoup-3.1.0.1.ebuild:
  Merge from Prefix

  08 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  beautifulsoup-3.1.0.1.ebuild, +files/beautifulsoup-3.1.0.1-python-3.patch:
  Add patch for compatibility with Python 3 (upstream patches don't apply
  cleanly). Set SUPPORT_PYTHON_ABIS.

*beautifulsoup-3.1.0.1 (07 Sep 2009)

  07 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +beautifulsoup-3.1.0.1.ebuild:
  Bump

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  -beautifulsoup-3.0.4.ebuild:
  Remove old

  27 Apr 2009; Markus Meier <maekke@gentoo.org> beautifulsoup-3.0.7.ebuild:
  amd64/x86 stable, bug #267336

  26 Apr 2009; Brent Baude <ranger@gentoo.org> beautifulsoup-3.0.7.ebuild:
  stable ppc, bug 267336

  25 Apr 2009; Brent Baude <ranger@gentoo.org> beautifulsoup-3.0.7.ebuild:
  stable ppc64, bug 267336

  24 Apr 2009; Patrick Lauer <patrick@gentoo.org>
  -beautifulsoup-3.0.5.ebuild:
  Remove old
