@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/beautifulsoup
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.26 2009/12/21 00:13:11 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.27 2010/01/24 05:51:39 tgall Exp $
+
+  23 Jan 2010; Tom Gall <tgall@gentoo.org> beautifulsoup-3.0.8.ebuild
+  stable on ppc64, bug #301954
 
 *beautifulsoup-3.1.0.1-r1 (21 Dec 2009)
 *beautifulsoup-3.0.8 (21 Dec 2009)
